--- a/signup.html
+++ b/signup.html
@@ -86,7 +86,7 @@
 <main class="form-signin w-100 m-auto">
   <form action="/" class="form-signin" method="post">
     <!-- <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-    <h1 class="h3 mb-3 fw-normal">Sample Project</h1>
+    <h1 class="h3 mb-3 fw-normal">Harshit</h1>
 
     <div class="form-floating">
       <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
