--- a/signup.html
+++ b/signup.html
@@ -84,6 +84,7 @@
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
+  <img src="/uploads/tomato.jpeg" alt="tomato"/>
   <form action="/" class="form-signin" method="post">
     <!-- <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
     <h1 class="h3 mb-3 fw-normal">Sign up for Newsletter</h1>
